--- a/requirements.txt
+++ b/requirements.txt
@@ -1,199 +1,6 @@
-accelerate==1.4.0
-aiofiles==23.2.1
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-alembic==1.15.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.7.0
-asttokens==3.0.0
-attrs==25.1.0
-audioop-lts==0.2.1
-beautifulsoup4==4.13.3
-blinker==1.9.0
-cachetools==5.5.1
-cargo==0.3
-certifi==2024.12.14
-charset-normalizer==3.4.0
-click==8.1.8
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.1
-cycler==0.12.1
-databricks-sdk==0.49.0
-dataclasses-json==0.6.7
-debugpy==1.8.12
-decorator==5.1.1
-Deprecated==1.2.18
-diffusers==0.32.2
-distro==1.9.0
-docker==7.1.0
-executing==2.2.0
-fastapi==0.115.6
-fastjsonschema==2.21.1
-ffmpy==0.5.0
-filelock==3.16.1
-Flask==3.1.0
-fonttools==4.55.8
-frozenlist==1.5.0
-fsspec==2024.12.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.38.0
-gradio==5.9.1
-gradio_client==1.5.2
-graphene==3.4.3
-graphql-core==3.2.6
-graphql-relay==3.2.0
-greenlet==3.1.1
-groq==0.16.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.27.0
-idna==3.10
-importlib_metadata==8.6.1
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.32.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-langchain==0.3.17
-langchain-community==0.3.16
-langchain-core==0.3.33
-langchain-experimental==0.3.4
-langchain-groq==0.2.4
-langchain-text-splitters==0.3.5
-langserve==0.3.1
-langsmith==0.3.4
-littleutils==0.2.4
-lxml==5.3.1
-Mako==1.3.9
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.26.1
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mlflow==2.21.2
-mlflow-skinny==2.21.2
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-narwhals==1.25.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.2.0
-nvidia-smi==0.1.3
-opentelemetry-api==1.31.1
-opentelemetry-sdk==1.31.1
-opentelemetry-semantic-conventions==0.52b1
-orjson==3.10.12
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pickles==0.1.1
-pickleshare==0.7.5
-pillow==11.0.0
-platformdirs==4.3.6
-plotly==6.0.0
-pluggy==1.5.0
-prompt_toolkit==3.0.50
-propcache==0.2.1
-protobuf==5.29.3
-psutil==6.1.1
-pure_eval==0.2.3
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.10.4
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.18.0
-pyparsing==3.2.1
-pytest==8.3.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.20
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-ruff==0.8.4
-safehttpx==0.1.6
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-semantic-version==2.10.0
-sentence-transformers==3.4.1
-setuptools==78.1.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sorcery==0.2.2
-soupsieve==2.6
-SQLAlchemy==2.0.37
-sqlparse==0.5.3
-sse-starlette==2.2.1
-stack-data==0.6.3
-starlette==0.41.3
-streamlit==1.41.1
-streamlit-option-menu==0.4.0
-sympy==1.13.1
-tenacity==9.0.0
-text-generation==0.7.0
-threadpoolctl==3.5.0
-tmdbv3api==1.9.0
-tokenizers==0.21.0
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.48.2
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-uvicorn==0.34.0
-waitress==3.0.2
-watchdog==6.0.0
-wcwidth==0.2.13
-websockets==14.1
-Werkzeug==3.1.3
-wheel==0.45.1
-wordcloud==1.9.4
-wrapt==1.17.2
-xgboost==2.1.4
-yarl==1.18.3
-zipp==3.21.0
-zstandard==0.23.0
+streamlit
+pandas
+numpy
+plotly
+matplotlib
+seaborn
